# paimon-rust

./: .gitignore  .licenserc.yaml  Cargo.toml  DEPENDENCIES.rust.tsv
.cargo/: config.toml
.github/workflows/: ci.yml  release-go-binding.yml  release-rust.yml  release_python_binding.yml
bindings/c/: DEPENDENCIES.rust.tsv
bindings/c/src/: table.rs  types.rs
bindings/python/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  project-description.md  pyproject.toml
bindings/python/python/pypaimon_rust/: datafusion.pyi
bindings/python/src/: context.rs  partition.rs  predicate.rs  read.rs  snapshot.rs  table.rs  tag.rs  udf.rs
bindings/python/tests/: test_datafusion.py  test_read.py
crates/integration_tests/: DEPENDENCIES.rust.tsv
crates/integration_tests/tests/: append_tables.rs  read_tables.rs
crates/integrations/datafusion/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
crates/integrations/datafusion/src/: blob_view.rs  catalog.rs  delete.rs  filter_pushdown.rs  full_text_search.rs  hybrid_search.rs  lateral_vector_search.rs  lib.rs  merge_into.rs  procedures.rs  relation_planner.rs  sql_context.rs  table_loader.rs  update.rs  variant_pushdown.rs  vector_search.rs
crates/integrations/datafusion/src/physical_plan/: scan.rs  sink.rs
crates/integrations/datafusion/src/system_tables/: branches.rs  files.rs  manifests.rs  mod.rs  options.rs  partitions.rs  physical_files_size.rs  referenced_files_size.rs  schemas.rs  snapshots.rs  table_indexes.rs  tags.rs
crates/integrations/datafusion/src/table/: mod.rs
crates/integrations/datafusion/tests/: append_merge_into.rs  blob_tests.rs  delete_tests.rs  dynamic_bucket_tables.rs  merge_into_tests.rs  mosaic_tables.rs  pk_tables.rs  procedures.rs  query_auth.rs  read_tables.rs  sql_context_tests.rs  system_tables.rs  update_tests.rs  variant_pushdown.rs
crates/integrations/datafusion/tests/common/: mod.rs
crates/paimon/: Cargo.toml  DEPENDENCIES.rust.tsv
crates/paimon/src/: error.rs  lib.rs  predicate_stats.rs  variant.rs  vector_search.rs
crates/paimon/src/api/: api_request.rs  api_response.rs  mod.rs  resource_paths.rs  rest_api.rs
crates/paimon/src/arrow/: filtering.rs  mod.rs  residual.rs  shredding.rs
crates/paimon/src/btree/: query.rs
crates/paimon/src/catalog/: filesystem.rs  mod.rs  partition_listing.rs
crates/paimon/src/deletion_vector/: core.rs  factory.rs
crates/paimon/src/io/: file_io.rs
crates/paimon/src/spec/: core_options.rs  data_file.rs  index_file_meta.rs  index_manifest.rs  manifest.rs  manifest_file_meta.rs  mod.rs  objects_file.rs  partition.rs  pk_vector_source.rs  predicate.rs  schema.rs  snapshot.rs  variant_metadata.rs
crates/paimon/src/table/: blob_file_writer.rs  btree_global_index_build_builder.rs  bucket_assigner_cross.rs  bucket_assigner_dynamic.rs  cow_writer.rs  data_evolution_reader.rs  data_evolution_writer.rs  data_file_reader.rs  data_file_writer.rs  dedicated_format_file_writer.rs  format_read_builder.rs  format_table_read.rs  format_table_scan.rs  format_write_builder.rs  full_text_search_builder.rs  global_index_drop_builder.rs  global_index_scanner.rs  global_index_types.rs  hybrid_search_builder.rs  kv_file_reader.rs  kv_file_writer.rs  lumina_index_build_builder.rs  mod.rs  partition_stat.rs  postpone_file_writer.rs  query_auth.rs  read_builder.rs  referenced_files.rs  rest_env.rs  schema_manager.rs  snapshot_manager.rs  source.rs  stats_filter.rs  table_commit.rs  table_read.rs  table_scan.rs  table_write.rs  tag_manager.rs  time_travel.rs  vector_search_builder.rs  (+2 more)
crates/paimon/src/tantivy/: full_text_search.rs
crates/paimon/tests/: mock_server.rs  rest_api_test.rs  rest_catalog_test.rs
docs/: mkdocs.yml
docs/src/: datafusion.md  getting-started.md  sql.md
(+12 files in other folders)
